--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
     "name": "dhtml/flarum-ext-translate",
-    "description": "Translate flarum with google api",
+    "description": "Translate flarum site with google api",
     "keywords": [
         "flarum"
     ],
     "type": "flarum-extension",
     "license": "GPL-1.0-or-later",
     "require": {
-        "flarum/core": "^1.2.0"
+        "flarum/core": "^1.2.0",
+        "google/cloud-translate": "^1.12"
     },
     "authors": [
         {
@@ -23,13 +24,12 @@
     },
     "extra": {
         "flarum-extension": {
-            "title": "Flarum Translate",
+            "title": "Flarum Translate Site",
             "category": "",
             "icon": {
-                "name": "",
-                "color": "",
-                "backgroundColor": ""
-            }
+                "name": "fas fa-language",
+                "backgroundColor": "#4caf50",
+                "color": "#ffffff"            }
         },
         "flarum-cli": {
             "modules": {
@@ -51,28 +51,5 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "autoload-dev": {
-        "psr-4": {
-            "Dhtml\\FlarumTranslate\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "test": [
-            "@test:unit",
-            "@test:integration"
-        ],
-        "test:unit": "phpunit -c tests/phpunit.unit.xml",
-        "test:integration": "phpunit -c tests/phpunit.integration.xml",
-        "test:setup": "@php tests/integration/setup.php"
-    },
-    "scripts-descriptions": {
-        "test": "Runs all tests.",
-        "test:unit": "Runs all unit tests.",
-        "test:integration": "Runs all integration tests.",
-        "test:setup": "Sets up a database for use with integration tests. Execute this only once."
-    },
-    "require-dev": {
-        "flarum/testing": "^1.0.0"
-    }
+    "prefer-stable": true
 }
